dark mode ui bugs fixed

--- a/App/public/css/Pre_Admission_Console_Css/All.css
+++ b/App/public/css/Pre_Admission_Console_Css/All.css
@@ -133,7 +133,7 @@ nav {
     width: 54rem;
     height: 33rem;
     top: 50%;
-    left: 50%;
+    left: 56%;
     transform: translate(-50%, -50%);
     border-radius: 25px;
     /* Rounded corners */
@@ -691,3 +691,6 @@ table {
     /* Color of the scrollbar handle on hover */
 }
 
+.container-fluid{
+    height: 1500px;
+}
